--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/postcss": "^4.1.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-prettier": "^5.4.0",
+        "eslint-plugin-react": "^7.37.5",
         "postcss": "^8.5.3",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -26,6 +30,8 @@
         "tailwindcss": "^4.1.7"
     },
     "devDependencies": {
+        "@eslint/compat": "^1.2.9",
+        "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.25.0",
         "@types/node": "^22.15.21",
         "@types/react": "^19.1.2",
