--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.5.3",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-feather": "^2.0.10",
         "react-redux": "^9.2.0",
         "react-router": "^7.6.0",
         "react-router-dom": "^7.6.0",
