--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.4.0",
         "eslint-plugin-react": "^7.37.5",
+        "json2mq": "^0.2.0",
         "postcss": "^8.5.3",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -28,15 +29,18 @@
         "react-router-dom": "^7.6.0",
         "stylelint": "^16.19.1",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss": "^4.1.7"
+        "tailwindcss": "^4.1.7",
+        "use-subscription": "^1.11.0"
     },
     "devDependencies": {
         "@eslint/compat": "^1.2.9",
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.25.0",
+        "@types/json2mq": "^0.2.2",
         "@types/node": "^22.15.21",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
+        "@types/use-subscription": "^1.0.2",
         "@vitejs/plugin-react": "^4.4.1",
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
