--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.4.1",
         "eslint-plugin-react": "^7.37.5",
+        "json2mq": "^0.2.0",
         "postcss": "^8.5.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -27,15 +28,18 @@
         "react-router": "^7.6.1",
         "react-router-dom": "^7.6.1",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss": "^4.1.8"
+        "tailwindcss": "^4.1.8",
+        "use-subscription": "^1.11.0"
     },
     "devDependencies": {
         "@eslint/compat": "^1.2.9",
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.28.0",
+        "@types/json2mq": "^0.2.2",
         "@types/node": "^22.15.29",
         "@types/react": "^19.1.6",
         "@types/react-dom": "^19.1.5",
+        "@types/use-subscription": "^1.0.2",
         "@vitejs/plugin-react": "^4.5.0",
         "eslint": "^9.28.0",
         "eslint-plugin-react-hooks": "^5.2.0",
